--- a/project.config.json
+++ b/project.config.json
@@ -12,6 +12,7 @@
 	"compileType": "miniprogram",
 	"appid": "wx326af39535edaf22",
 	"projectname": "wx-mpvue-demo",
+	"libVersion": "2.5.0",
 	"condition": {
 		"search": {
 			"current": -1,
